--- a/Views/MST_ContactCategory/MST_ContactCategoryList.cshtml
+++ b/Views/MST_ContactCategory/MST_ContactCategoryList.cshtml
@@ -22,7 +22,7 @@
 
 
     <div style="margin:20px 0px;">
-        <form method="post" asp-controller="ContactCategory" asp-action="OpenPage">
+        <form method="post" asp-controller="MST_ContactCategory" asp-action="OpenPage">
             <button id="sample_editable_1_2_new" class="btn btn-primary">
                 <i class="mr-cus5 bi bi-plus-circle-fill"></i>Add Category
             </button>
@@ -52,13 +52,13 @@
                     <td>
                         <div class="row">
                             <div class="col-lg-6">
-                                <form method="post" asp-controller="ContactCategory" asp-action="OpenPage">
+                                <form method="post" asp-controller="MST_ContactCategory" asp-action="OpenPage">
                                     <input type="hidden" name="ContactCategoryID" value="@Convert.ToInt32(dr["ContactCategoryID"])" />
                                     <button type="submit" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
                                 </form>
                             </div>
                             <div class="col-lg-6">
-                                <form method="post" asp-controller="ContactCategory" asp-action="Delete">
+                                <form method="post" asp-controller="MST_ContactCategory" asp-action="Delete">
                                     <input type="hidden" name="ContactCategoryID" value="@Convert.ToInt32(dr["ContactCategoryID"])" />
                                     <button type="submit" class="btn btn-danger" onclick="return fun1()"><i class="bi bi-trash3-fill"></i></button>
                                 </form>
