--- a/Views/CON_Contact/CON_ContactAddEdit.cshtml
+++ b/Views/CON_Contact/CON_ContactAddEdit.cshtml
@@ -137,7 +137,7 @@
                 {
                     type: "POST",
                     contentType: "application/json; charset:utf-8",
-                    url: "@Url.Action("DropdownByCountryID","Contact")" + "?&CountryID=" + CountryID,
+                    url: "@Url.Action("DropdownByCountryID","CON_Contact")" + "?&CountryID=" + CountryID,
                     data: {},
                     dataType: "json",
                     success: function (Result) {
@@ -169,7 +169,7 @@
                 {
                     type: "POST",
                     contentType: "application/json; charset:utf-8",
-                    url: "@Url.Action("DropdownByStateID", "Contact")" + "?&StateID=" + StateID,
+                    url: "@Url.Action("DropdownByStateID", "CON_Contact")" + "?&StateID=" + StateID,
                     data: {},
                     dataType: "json",
                     success: function (Result) {
