--- a/Views/CON_Contact/CON_ContactList.cshtml
+++ b/Views/CON_Contact/CON_ContactList.cshtml
@@ -189,7 +189,7 @@
                 {
                     type: "POST",
                     contentType: "application/json; charset:utf-8",
-                    url: "@Url.Action("DropdownByStateID", "Contact")" + "?&StateID=" + StateID,
+                    url: "@Url.Action("DropdownByStateID", "CON_Contact")" + "?&StateID=" + StateID,
                     data: {},
                     dataType: "json",
                     success: function (Result) {
