LOC_Country Area Done

--- a/Areas/LOC_Country/Views/LOC_Country/LOC_CountryAddEdit.cshtml
+++ b/Areas/LOC_Country/Views/LOC_Country/LOC_CountryAddEdit.cshtml
@@ -1,4 +1,4 @@
-﻿@model LOC_CountryModel
+﻿@model KevalThemeAddressBook.Areas.LOC_Country.Models.LOC_CountryModel
 @{
     ViewData["Title"] = "Country Add Edit";
 }
