--- a/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
+++ b/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
@@ -5,6 +5,15 @@
 @using System.Data
 @model DataTable
 
+@if (TempData["StateMsg"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        <button type="button" id="btnclosemsg" class="btn btn-primary"><span aria-hidden="true">&times;</span></button>
+        <strong>@TempData["StateMsg"]</strong>
+    </div>
+    TempData["StateMsg"] = null;
+}
+
 <div class="pagetitle">
     <h1>AddressBook</h1>
     <nav>
@@ -23,7 +32,7 @@
                 @if (ViewBag.CountryList != null)
                 {
                     <div class="form-group">
-                        <select class="form-control CountryDropDown" name="CountryID"  asp-items="@(new SelectList(ViewBag.CountryList, "CountryID", "CountryName").ToList()) ">
+                        <select class="form-control CountryDropDown" name="CountryID" asp-items="@(new SelectList(ViewBag.CountryList, "CountryID", "CountryName").ToList()) ">
                             @*Here First argument Country ID Should Be Consider as Values and second argument CountryName as html that is diaplay in list*@
                             <option>Select Country</option>
                         </select>
@@ -34,7 +43,7 @@
                 <input name="StateName" id="StateName" type="text" placeholder="Enter State Name" class="form-control" />
             </div>
             <div class="col-lg-3">
-                    <input name="StateCode" id="StateCode" type="text" placeholder="Enter State Code" class="form-control" />
+                <input name="StateCode" id="StateCode" type="text" placeholder="Enter State Code" class="form-control" />
             </div>
             <div class="col-lg-3 d-inline">
                 <input type="submit" class="btn btn-primary" value="Search" />
