--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -240,6 +240,15 @@
                 responsive: true;
             });
         });
+        window.setTimeout(function () {
+            $(".alert").fadeTo(500, 0).slideUp(500, function () {
+                $(this).remove();
+            });
+
+        }, 4000);
+        $("#btnclosemsg").click(function () {
+            $(".alert").remove();
+        });
     </script>
 </body>
 
