--- a/Areas/CON_Contact/Views/CON_Contact/CON_ContactList.cshtml
+++ b/Areas/CON_Contact/Views/CON_Contact/CON_ContactList.cshtml
@@ -190,7 +190,7 @@
         function fnOnCityChange() {
         var StateID = $("#StateID").val();
 
-        if (CountryID !== "") {
+        if (StateID !== "") {
             $("#CityID").empty();
             $("#CityID").append($("<option></option>").val("").html("Select City"));
             $.ajax(
