--- a/Areas/LOC_City/Views/LOC_City/LOC_CityAddEdit.cshtml
+++ b/Areas/LOC_City/Views/LOC_City/LOC_CityAddEdit.cshtml
@@ -5,8 +5,8 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">City</a></li>
-            <li class="breadcrumb-item active">Form</li>
+            <li class="breadcrumb-item"><a asp-area="LOC_City" asp-controller="LOC_City" asp-action="Index">City</a></li>
+            <li class="breadcrumb-item active">Add Edit Form</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
