--- a/Areas/LOC_Country/Views/LOC_Country/LOC_CountryAddEdit.cshtml
+++ b/Areas/LOC_Country/Views/LOC_Country/LOC_CountryAddEdit.cshtml
@@ -7,8 +7,8 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Country</a></li>
-            <li class="breadcrumb-item active">List</li>
+            <li class="breadcrumb-item"><a asp-area="LOC_Country" asp-controller="LOC_Country" asp-action="Index">Country</a></li>
+            <li class="breadcrumb-item active">Add Edit Form</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
