--- a/Areas/LOC_State/Views/LOC_State/LOC_StateAddEdit.cshtml
+++ b/Areas/LOC_State/Views/LOC_State/LOC_StateAddEdit.cshtml
@@ -3,8 +3,8 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">State</a></li>
-            <li class="breadcrumb-item active">Form</li>
+            <li class="breadcrumb-item"><a asp-area="LOC_State" asp-controller="LOC_State" asp-action="Index">State</a></li>
+            <li class="breadcrumb-item active">Add Edit Form</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
