--- a/Areas/MST_ContactCategory/Views/MST_ContactCategory/MST_ContactCategoryList.cshtml
+++ b/Areas/MST_ContactCategory/Views/MST_ContactCategory/MST_ContactCategoryList.cshtml
@@ -20,8 +20,8 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Contact</a></li>
-            <li class="breadcrumb-item active">Category</li>
+            <li class="breadcrumb-item"><a asp-area="MST_ContactCategory" asp-controller="MST_ContactCategory" asp-action="Index">Contact Category</a></li>
+            <li class="breadcrumb-item active">List</li>
         </ol>
     </nav>
 </div><!-- End Page Title -->
