--- a/Areas/DashBoard/Views/Home/Index.cshtml
+++ b/Areas/DashBoard/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+            <li class="breadcrumb-item"><a asp-area="DashBoard" asp-controller="Home" asp-action="Index">Home</a></li>
             <li class="breadcrumb-item active">Dashboard</li>
         </ol>
     </nav>
