--- a/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
+++ b/Areas/LOC_City/Views/LOC_City/LOC_CityList.cshtml
@@ -18,7 +18,7 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">City</a></li>
+            <li class="breadcrumb-item"><a asp-area="LOC_City" asp-controller="LOC_City" asp-action="Index">City</a></li>
             <li class="breadcrumb-item active">List</li>
         </ol>
     </nav>
