--- a/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
+++ b/Areas/LOC_State/Views/LOC_State/LOC_StateList.cshtml
@@ -18,7 +18,7 @@
     <h1>AddressBook</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">State</a></li>
+            <li class="breadcrumb-item"><a asp-area="LOC_State" asp-controller="LOC_State" asp-action="Index">State</a></li>
             <li class="breadcrumb-item active">List</li>
         </ol>
     </nav>
