--- a/Areas/SEC_Login/Views/Login/Login.cshtml
+++ b/Areas/SEC_Login/Views/Login/Login.cshtml
@@ -1,14 +1,14 @@
 ﻿@{
     Layout = "~/Views/Shared/_Layout_Login.cshtml";
 }
-
+@model KevalThemeAddressBook.Areas.SEC_Login.Models.SEC_LoginModel
 <div class="limiter">
     <div class="container-login100">
         <div class="wrap-login100" style="padding:140px">
             <div class="login100-pic js-tilt" data-tilt="" style="will-change: transform; transform: perspective(300px) rotateX(0deg) rotateY(0deg);">
                 <img src="https://colorlib.com/etc/lf/Login_v1/images/img-01.png" alt="IMG">
             </div>
-            <form class="login100-form validate-form" asp-controller="Login" asp-action="LoginCheck">
+            <form class="login100-form validate-form" asp-area="SEC_Login" asp-controller="Login" asp-action="LoginCheck" method="post">
                 <span class="login100-form-title">
                     AddressBook Login
                 </span>
@@ -23,14 +23,14 @@
 
                 }
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
-                    <input class="input100" type="text" name="UserName" placeholder="Email">
+                    <input class="input100" type="text" asp-for="UserName" name="UserName" placeholder="Email">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="bi bi-person-fill"></i>
                     </span>
                 </div>
                 <div class="wrap-input100 validate-input" data-validate="Password is required">
-                    <input class="input100" type="password" name="Password" placeholder="Password">
+                    <input class="input100" type="password"asp-for="Password" name="Password" placeholder="Password">
                     <span class="focus-input100"></span>
                     <span class="symbol-input100">
                         <i class="bi bi-lock"></i>
