--- a/Areas/CON_Contact/Views/CON_Contact/CON_ContactAddEdit.cshtml
+++ b/Areas/CON_Contact/Views/CON_Contact/CON_ContactAddEdit.cshtml
@@ -22,33 +22,45 @@
         @if (ViewBag.CountryList != null)
         {
             <div class="form-group">
-                <select class="form-control" asp-for="CountryID" asp-items="@(new SelectList(ViewBag.CountryList, "CountryID", "CountryName"))" onchange="fnOnCountryChange();">
-                    <option>Select Country</option>
-                </select>
+                <label class="form-label">Select Country</label>
+                <div class="form-group">
+                    <select class="form-control" asp-for="CountryID" asp-items="@(new SelectList(ViewBag.CountryList, "CountryID", "CountryName"))" onchange="fnOnCountryChange();">
+                        <option>Select Country</option>
+                    </select>
+                </div>
             </div>
         }
         @if (ViewBag.StateList != null)
         {
             <div class="form-group">
-                <select class="form-control" asp-for="StateID" asp-items="@(new SelectList(ViewBag.StateList, "StateID", "StateName"))" onchange="fnOnStateChange();">
-                    <option>Select State</option>
-                </select>
+                <label class="form-label">Select State</label>
+                <div class="form-group">
+                    <select class="form-control" asp-for="StateID" asp-items="@(new SelectList(ViewBag.StateList, "StateID", "StateName"))" onchange="fnOnStateChange();">
+                        <option>Select State</option>
+                    </select>
+                </div>
             </div>
         }
         @if (ViewBag.CityList != null)
         {
             <div class="form-group">
-                <select class="form-control" asp-for="CityID" asp-items="@(new SelectList(ViewBag.CityList, "CityID", "CityName"))">
-                    <option>Select City</option>
-                </select>
+                <label class="form-label">Select City</label>
+                <div class="form-group">
+                    <select class="form-control" asp-for="CityID" asp-items="@(new SelectList(ViewBag.CityList, "CityID", "CityName"))">
+                        <option>Select City</option>
+                    </select>
+                </div>
             </div>
         }
         @if (ViewBag.ContactCategoryDropDownList != null)
         {
             <div class="form-group">
-                <select class="form-control" asp-items="@(new SelectList(ViewBag.ContactCategoryDropDownList, "ContactCaregoryID", "ContactCategoryName").ToList()) " asp-for="ContactCategoryID">
-                    <option>Select ContactCategory</option>
-                </select>
+                <label class="form-label">Select Contact Category</label>
+                <div class="form-group">
+                    <select class="form-control" asp-items="@(new SelectList(ViewBag.ContactCategoryDropDownList, "ContactCaregoryID", "ContactCategoryName").ToList()) " asp-for="ContactCategoryID">
+                        <option>Select ContactCategory</option>
+                    </select>
+                </div>
             </div>
         }
         <div class="form-group">
@@ -70,11 +82,6 @@
             <label class="form-label">Email</label>
             <input type="text" placeholder="Enter Email Address" class="form-control" asp-for="Email" />
             <span asp-validation-for="Email" class="text-danger"></span>
-        </div>
-        <div class="form-group">
-            <label class="form-label">Age</label>
-            <input type="text" placeholder="Enter Age" class="form-control" asp-for="Age" />
-            <span asp-validation-for="Age" class="text-danger"></span>
         </div>
         <div class="form-group">
             <label class="form-label">Address</label>
